Add initial carousel

--- a/index.jade
+++ b/index.jade
@@ -1,7 +1,9 @@
 h1 Protolon Partials
 
 h3 Mobile Nav
-p 
-  != partial('/mobile-nav/mobile-nav-toggle')
+p An off-canvas mobile nav made using Bootstrap 3 components.
 
-!= partial('/mobile-nav/mobile-nav')
+p 
+  != partial('mobile-nav/mobile-nav-toggle')
+
+!= partial('mobile-nav/mobile-nav')
